--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"classnames": "^2.3.1",
 		"next": "latest",
 		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"react-dom": "^17.0.2",
+		"swr": "^0.5.6"
 	},
 	"devDependencies": {
 		"@types/react": "^17.0.14",
