--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start"
-	},
-	"dependencies": {
-		"classnames": "^2.3.1",
-		"next": "latest",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"swr": "^0.5.6"
-	},
-	"devDependencies": {
-		"@types/react": "^17.0.14",
-		"autoprefixer": "^10.2.6",
-		"postcss": "^8.3.5",
-		"tailwindcss": "^2.2.4",
-		"typescript": "^4.3.5"
-	}
+  "private": true,
+  "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.38",
+    "autoprefixer": "^10.4.1",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.11",
+    "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "next": "^12.0.0",
+    "next-plugin-preact": "^3.0.6",
+    "preact": "^10.5.15",
+    "preact-render-to-string": "^5.1.19",
+    "react": "npm:@preact/compat@^17.0.2",
+    "react-dom": "npm:@preact/compat@^17.0.2",
+    "react-ssr-prepass": "npm:preact-ssr-prepass@^1.2.0",
+    "scheduler": "^0.20.2",
+    "swr": "^1.1.2"
+  }
 }
